# cmake_qt_translation_example

./: .gitignore  CMakeFunctions.txt  CMakeLists.txt  CMakeProjectVersion.txt  README.md
core/: CMakeLists.txt  contact.cpp  contact.h  core.h  core_strings.h  phone_number.cpp  phone_number.h
core/resources/translations/: translation_de_DE.ts  translation_en_US.ts  translation_pt_BR.ts
view/: CMakeLists.txt  main.cpp  main_screen.cpp  main_screen.h  translation_utils.cpp  translation_utils.h
